--- a/src/componants/HomePage/style.scss
+++ b/src/componants/HomePage/style.scss
@@ -1,8 +1,65 @@
-.home-page{
-    width: 100%;
-    height: 100%;
+.home-page {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #3c4042;
+
+  .home-page-container {
+    width: 350px;
+    height: 220px;
+    border: 1px solid gray;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
-    background-color: #3c4042;
+    border-radius: 20px;
+    background-color: #66696b;
+
+    input {
+      width: 80%;
+      height: 30px;
+      background-color: transparent;
+      color: white;
+      border-radius: 10px;
+      outline: none;
+      padding: 2px 15px;
+
+      &::placeholder {
+        color: white;
+      }
+
+      &:focus-visible {
+        outline: none;
+        border: 2px solid white;
+      }
+    }
+
+    .homepage-btn-container {
+      width: 100%;
+      display: flex;
+      justify-content: space-evenly;
+
+      button {
+        background-color: palegreen;
+        width: max-content;
+        height: 30px;
+        padding: 5px 15px;
+        border-radius: 10px;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        font-size: 16px;
+        font-weight: bold;
+
+        &:hover {
+          box-shadow: 0 0 0 2px white, 0 0 0 5px black;
+        }
+        &:focus-visible {
+          box-shadow: 0 0 0 2px white, 0 0 0 5px black;
+        }
+      }
+    }
+  }
 }
