--- a/src/componants/HomePage/style.scss
+++ b/src/componants/HomePage/style.scss
@@ -20,19 +20,18 @@
     input {
       width: 80%;
       height: 30px;
-      background-color: transparent;
-      color: white;
+      background-color: #fff;
+      color: #646060;
+      font-weight: bold;
       border-radius: 10px;
       outline: none;
       padding: 2px 15px;
+      border: none;
 
-      &::placeholder {
-        color: white;
-      }
-
-      &:focus-visible {
+      &:focus-within {
         outline: none;
-        border: 2px solid white;
+        //   border: 2px solid white;
+        box-shadow: 0 0 0 2px black, 0 0 0 4px whitesmoke;
       }
     }
 
@@ -52,6 +51,7 @@
         cursor: pointer;
         font-size: 16px;
         font-weight: bold;
+        transition: all 0.4s ease-in-out;
 
         &:hover {
           box-shadow: 0 0 0 2px white, 0 0 0 5px black;
